fixed z-index issue with image gallery

--- a/client/src/components/AnimationOverlay/animation-overlay.scss
+++ b/client/src/components/AnimationOverlay/animation-overlay.scss
@@ -1,7 +1,7 @@
 $light: white;
 
 .animation-container {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   background: #ebe2d9;
@@ -9,18 +9,12 @@ $light: white;
   z-index: 0;
 }
 
-.animation-svg {
-  display: none;
-}
-
 .animation-container-overlay {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   background: transparent;
-  z-index: 2;
-  filter: url('#noise');
-  mix-blend-mode: overlay;
+  z-index: 1;
 }
 
 .grads {
@@ -65,11 +59,4 @@ $light: white;
     rgba($light, 0.019) 95.6%,
     rgba($light, 0) 100%
   );
-}
-
-@media (max-width: 768px) {
-  .animation-container,
-  .animation-container__overlay {
-    position: fixed;
-  }
 }
