--- a/client/src/pages/Attend/attend.scss
+++ b/client/src/pages/Attend/attend.scss
@@ -1,7 +1,7 @@
 .attend-container {
   display: flex;
   box-sizing: border-box;
-  height: 100vh;
+  min-height: 100vh;
   padding: 55px 0;
   //z-index: 5;
 }
